[package]
name = "loppler"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Simple local file backups with a bit of compression"
readme = "README.md"
homepage = "https://github.com/PlexSheep/loppler"
repository = "https://github.com/PlexSheep/loppler"
keywords = ["cli"]


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
