[package]
name = "loppel"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Simple local file backups with a bit of compression"
readme = "README.md"
homepage = "https://github.com/PlexSheep/lopppel"
repository = "https://github.com/PlexSheep/lopppel"
keywords = ["cli"]


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
tar = "0.4.43"
zstd = { version = "0.13.3", features = [] }

[dev-dependencies]
fastrand = "2.3.0"
serial_test = "3.2.0"
tempfile = "3.16.0"
